tests/baselines/reference/duplicateTypeParameters1.errors.txt
==== tests/cases/compiler/duplicateTypeParameters1.ts (1 errors) ====
    function A<X, X>() { }
               ~
!!! error TS2000: Duplicate identifier 'X'.
    